--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.4.3",
     "gatsby-image": "^2.0.41",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-styled-components": "^3.1.5",
     "gatsby-plugin-twitter": "^2.0.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.12",
@@ -38,6 +40,7 @@
     "react-helmet": "^5.2.1",
     "react-share": "^2.4.0",
     "react-twitter-widgets": "^1.7.1",
+    "styled-components": "^4.3.2",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
