--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-nprogress": "^2.0.10",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-sitemap": "^2.1.0",
@@ -39,6 +40,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-share": "^2.4.0",
+    "react-social-icons": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^4.3.2",
     "url-join": "^4.0.0"
