--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.4.3",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-feed": "^2.2.0",
     "gatsby-plugin-google-analytics": "^2.0.19",
@@ -20,7 +23,7 @@
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.1.5",
+    "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.0.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.12",
@@ -42,11 +45,13 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.24.2",
     "react-share": "^2.4.0",
     "react-social-icons": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.1",
+    "styled-icons": "^9.1.0",
     "tail.datetime": "^0.4.13",
     "url-join": "^4.0.0"
   },
