--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
     "gatsby-plugin-algolia": "^0.5.0",
+    "gatsby-plugin-breadcrumb": "^6.3.0",
     "gatsby-plugin-catch-links": "^2.1.21",
     "gatsby-plugin-feed": "^2.3.25",
     "gatsby-plugin-google-analytics": "^2.1.31",
@@ -47,7 +48,7 @@
     "react-icons": "^3.8.0",
     "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.25.2",
-    "react-share": "^4.0.0",
+    "react-share": "^4.0.1",
     "react-social-icons": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^4.4.1",
