--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^3.8.0",
     "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.25.2",
+    "react-lazy-load": "^3.0.13",
     "react-share": "^4.0.1",
     "react-social-icons": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
