--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.4.1",
+    "disqus-react": "^1.0.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.18",
     "gatsby-image": "^2.2.37",
@@ -42,13 +43,11 @@
     "react": "^16.12.0",
     "react-big-calendar": "^0.22.1",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.25.2",
-    "react-lazy-load": "^3.0.13",
     "react-share": "^4.0.1",
     "react-social-icons": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
