--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-catch-links": "^2.1.21",
     "gatsby-plugin-feed": "^2.3.25",
     "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-lodash": "^3.1.18",
     "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-nprogress": "^2.1.17",
@@ -50,6 +51,7 @@
     "react-intersection-observer": "^8.25.2",
     "react-share": "^4.0.1",
     "react-social-icons": "^4.1.0",
+    "react-transition-group": "^4.3.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^4.4.1",
     "styled-icons": "^9.1.0",
