removed styled-icons and added netlify cache plugin

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-lodash": "^3.1.18",
     "gatsby-plugin-manifest": "^2.2.34",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-nprogress": "^2.1.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-react-svg": "^2.1.2",
@@ -49,13 +50,11 @@
     "react-icons": "^3.8.0",
     "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.25.2",
-    "react-onclickoutside": "^6.9.0",
     "react-share": "^4.0.1",
     "react-social-icons": "^4.1.0",
     "react-transition-group": "^4.3.0",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^4.4.1",
-    "styled-icons": "^9.1.0",
     "tail.datetime": "^0.4.13",
     "url-join": "^4.0.1"
   },
