--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@mdx-js/react": "^1.5.5",
     "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.4.1",
@@ -28,6 +30,7 @@
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-sitemap": "^2.2.24",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-twitter": "^2.1.17",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-copy-linked-files": "^2.1.33",
@@ -56,6 +59,7 @@
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^4.4.1",
     "tail.datetime": "^0.4.13",
+    "theme-ui": "^0.3.1",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
