--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-twitter": "^2.1.17",
+    "gatsby-plugin-typography": "^2.3.22",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-copy-linked-files": "^2.1.33",
     "gatsby-remark-images": "^3.1.39",
@@ -57,9 +58,11 @@
     "react-social-icons": "^4.1.0",
     "react-transition-group": "^4.3.0",
     "react-twitter-widgets": "^1.7.1",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
     "tail.datetime": "^0.4.13",
     "theme-ui": "^0.3.1",
+    "typography": "^0.16.19",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
