--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/core": "^7.8.4",
     "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-links": "^5.3.13",
+    "@storybook/addon-viewport": "^5.3.13",
     "@storybook/addons": "^5.3.13",
     "@storybook/react": "^5.3.13",
     "babel-loader": "^8.0.6",
