--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,8 +5,11 @@ image:
 ports:
   - port: 3000
     onOpen: open-preview
+  - port: 6006
+    onOpen: ignore
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'init script' # runs during prebuild
-    command: echo 'start script'
+  # - command: gp await-port 6006 && sleep 3 && gp preview $(gp url 6006)
+  - init: npm install' # runs during prebuild
+    command: npm run storybook -- --ci
