--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "disqus-react": "^1.0.7",
     "dotenv": "^8.2.0",
     "gatsby": "^3.2.1",
-    "gatsby-image": "^3.2.0",
     "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-breadcrumb": "^6.3.0",
     "gatsby-plugin-catch-links": "^3.2.0",
     "gatsby-plugin-feed": "^3.2.0",
     "gatsby-plugin-google-analytics": "^3.2.0",
+    "gatsby-plugin-image": "^1.2.0",
     "gatsby-plugin-layout": "^2.2.0",
     "gatsby-plugin-lodash": "^4.2.0",
     "gatsby-plugin-manifest": "^3.2.0",
